- Corrected styling and templates structure for alignment

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -746,4 +746,5 @@ table.encoding tbody .widget_row_delete
 .add_not_allowed
 {
   color:#C1C1C1;
+  padding-left:1em;
 }
